--- a/cifar10_exp.ipynb
+++ b/cifar10_exp.ipynb
@@ -95,9 +95,9 @@
     "        true_name = \"_\".join(name.split(\"_\")[-2:])\n",
     "        rec[bname].append((true_name,tot,acc))\n",
     "        print(tot)\n",
-    "def draw_pic(picname):\n",
+    "def draw_pic(picname, names):\n",
     "    \n",
-    "    names = [ \"vanilla_finetune\", \"ewc\", \"lwf\", \"lwf_Unsupervised_SameDist\", \"lwf_Correct_Subset\"]#, \"lwf_scratch\", \"ewc_scratch\", \"vanilla_scratch\",]\n",
+    "    #names = [ ]#, \"lwf_scratch\", \"ewc_scratch\", \"vanilla_scratch\",]\n",
     "    tasks = []\n",
     "    vals = []\n",
     "    comps = []\n",
@@ -141,104 +141,116 @@
    "outputs": [],
    "source": [
     "epps = EPPS()\n",
-    "for i in range(1):\n",
-    "    rec = {}\n",
-    "    #epps.load(\"results/cifar10_5_domain_inc\")\n",
-    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#vanilla_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS20_DomS5/Seed{}\".format(i))\n",
-    "    epps.set_order(\"sequential\")\n",
-    "    read_result(epps, \"vanilla_finetune\")\n",
-    "    \n",
-    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS20_DomS5/Seed{}\".format(i))\n",
-    "    epps.set_order(\"sequential\")\n",
-    "    read_result(epps, \"lwf\")\n",
-    "    \n",
-    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00_unsup#US_sameD_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS20_DomS5/Seed{}\".format(i))\n",
-    "    epps.set_order(\"sequential\")\n",
-    "    read_result(epps, \"lwf_Unsupervised_SameDist\")\n",
-    "    \n",
-    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00#corrset_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS20_DomS5/Seed{}\".format(i))\n",
-    "    epps.set_order(\"sequential\")\n",
-    "    read_result(epps, \"lwf_Correct_Subset\")  \n",
-    "    \n",
-    "    #epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00__DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    #epps.set_order(\"sequential\")\n",
-    "    #read_result(epps, \"vanilla_scratch\")\n",
-    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#ewc5.00e+03_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS20_DomS5/Seed{}\".format(i))\n",
-    "    epps.set_order(\"sequential\")\n",
-    "    read_result(epps,\"ewc\")\n",
-    "    \"\"\"epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS20_DomS5/Seed{}\".format(i))\n",
-    "    read_result(epps, \"lwf_scratch\")\n",
-    "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS20_DomS5/Seed{}\".format(i))\n",
-    "    read_result(epps,\"ewc_scratch\")\"\"\"\n",
-    "    draw_pic(\"Data_Inc_seed_{}\".format(i))   \n",
-    "break\n",
-    "for i in range(1):\n",
-    "    rec = {}\n",
-    "    #epps.load(\"results/cifar10_5_domain_inc\")\n",
-    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#vanilla_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    epps.set_order(\"sequential\")\n",
-    "    read_result(epps, \"vanilla_finetune\")\n",
-    "    \n",
-    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    epps.set_order(\"sequential\")\n",
-    "    read_result(epps, \"lwf\")\n",
-    "    \n",
-    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00_unsup_#US_sameD_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    epps.set_order(\"sequential\")\n",
-    "    read_result(epps, \"lwf_Unsupervised_SameDist\")\n",
-    "    \n",
-    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00#corrset_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    epps.set_order(\"sequential\")\n",
-    "    read_result(epps, \"lwf_Correct_Subset\")  \n",
-    "    \n",
-    "    #epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00__DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    #epps.set_order(\"sequential\")\n",
-    "    #read_result(epps, \"vanilla_scratch\")\n",
-    "    epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#ewc5.00e+03_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    epps.set_order(\"sequential\")\n",
-    "    read_result(epps,\"ewc\")\n",
-    "    \"\"\"epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    read_result(epps, \"lwf_scratch\")\n",
-    "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    read_result(epps,\"ewc_scratch\")\"\"\"\n",
-    "    draw_pic(\"Data_Inc_seed_{}\".format(i))   \n",
-    "break\n",
-    "for i in range(1):\n",
-    "    rec = {}\n",
-    "    #epps.load(\"results/cifar10_5_domain_inc\")\n",
-    "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#vanilla_DScifar10_CIMmask_CTdomain_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    read_result(epps, \"vanilla_finetune\")\n",
-    "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00_DScifar10_CIMmask_CTdomain_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    read_result(epps, \"lwf\")\n",
-    "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03_DScifar10_CIMmask_CTdomain_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    read_result(epps,\"ewc\")\n",
-    "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#scratch_DScifar10_CIMmask_CTdomain_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    read_result(epps, \"vanilla_scratch\")\n",
-    "    \"\"\"epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00#scratch_DScifar10_CIMmask_CTdomain_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    read_result(epps, \"lwf_scratch\")\n",
-    "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03#scratch_DScifar10_CIMmask_CTdomain_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    read_result(epps,\"ewc_scratch\")\"\"\"\n",
-    "    draw_pic(\"Domain_Inc_seed_{}\".format(i))\n",
-    "for i in range(1):\n",
-    "    rec = {}\n",
-    "    #epps.load(\"results/cifar10_5_domain_inc\")\n",
-    "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#vanilla_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    epps.set_order(\"sequential\")\n",
-    "    read_result(epps, \"vanilla_finetune\")\n",
-    "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    epps.set_order(\"sequential\")\n",
-    "    read_result(epps, \"lwf\")\n",
-    "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    epps.set_order(\"sequential\")\n",
-    "    read_result(epps, \"vanilla_scratch\")\n",
-    "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    epps.set_order(\"sequential\")\n",
-    "    read_result(epps,\"ewc\")\n",
-    "    \"\"\"epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    read_result(epps, \"lwf_scratch\")\n",
-    "    epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
-    "    read_result(epps,\"ewc_scratch\")\"\"\"\n",
-    "    draw_pic(\"Data_Inc_seed_{}\".format(i))    "
+    "case = 1\n",
+    "if case  == 1:\n",
+    "    for i in range(1):\n",
+    "        rec = {}\n",
+    "        #epps.load(\"results/cifar10_5_domain_inc\")\n",
+    "        epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#vanilla_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS100_DomS5/Seed{}\".format(i))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"vanilla_finetune\")\n",
+    "\n",
+    "        epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.90e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"vanilla_scratch\")\n",
+    "        \n",
+    "        epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS100_DomS5/Seed{}\".format(i))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"lwf\")\n",
+    "\n",
+    "        epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00_unsup#US_sameD_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS100_DomS5/Seed{}\".format(i))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"lwf_Unsupervised_SameDist\")\n",
+    "\n",
+    "        epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00#corrset_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS100_DomS5/Seed{}\".format(i))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"lwf_Correct_Subset\")  \n",
+    "\n",
+    "        #epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00__DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        #epps.set_order(\"sequential\")\n",
+    "        #read_result(epps, \"vanilla_scratch\")\n",
+    "        epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#ewc5.00e+03_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS100_DomS5/Seed{}\".format(i))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps,\"ewc\")\n",
+    "        \n",
+    "        \"\"\"epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS100_DomS5/Seed{}\".format(i))\n",
+    "        read_result(epps, \"lwf_scratch\")\n",
+    "        epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgS100_DomS5/Seed{}\".format(i))\n",
+    "        read_result(epps,\"ewc_scratch\")\"\"\"\n",
+    "        draw_pic(\"Data_Inc_seed_{}\".format(i),\\\n",
+    "                 names=[\"vanilla_scratch\", \"vanilla_finetune\", \"ewc\", \"lwf\", \"lwf_Unsupervised_SameDist\", \"lwf_Correct_Subset\"])   \n",
+    "elif case == 2:\n",
+    "    for i in range(1):\n",
+    "        rec = {}\n",
+    "        #epps.load(\"results/cifar10_5_domain_inc\")\n",
+    "        epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#vanilla_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.90e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"vanilla_finetune\")\n",
+    "\n",
+    "        epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.90e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"lwf\")\n",
+    "\n",
+    "        epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00_unsup#US_sameD_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.90e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"lwf_Unsupervised_SameDist\")\n",
+    "\n",
+    "        epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00#corrset_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.90e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"lwf_Correct_Subset\")  \n",
+    "\n",
+    "        #epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#lwf1.00e+00__DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        #epps.set_order(\"sequential\")\n",
+    "        #read_result(epps, \"vanilla_scratch\")\n",
+    "        epps.load(\"results/cifar10_small_ResNet18_1.0e-02_#ewc5.00e+03_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.90e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps,\"ewc\")\n",
+    "        \"\"\"epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.90e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        read_result(epps, \"lwf_scratch\")\n",
+    "        epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.90e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        read_result(epps,\"ewc_scratch\")\"\"\"\n",
+    "        draw_pic(\"Data_Inc_seed_{}\".format(i),\\\n",
+    "                 names=[\"vanilla_finetune\", \"ewc\", \"lwf\", \"lwf_Unsupervised_SameDist\", \"lwf_Correct_Subset\"])    \n",
+    "elif case ==3:\n",
+    "    for i in range(1):\n",
+    "        rec = {}\n",
+    "        #epps.load(\"results/cifar10_5_domain_inc\")\n",
+    "        epps.load(\"results/cifar10_ResNet18_1.0e-02_#vanilla_DScifar10_CIMmask_CTdomain_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        read_result(epps, \"vanilla_finetune\")\n",
+    "        epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00_DScifar10_CIMmask_CTdomain_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        read_result(epps, \"lwf\")\n",
+    "        epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03_DScifar10_CIMmask_CTdomain_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        read_result(epps,\"ewc\")\n",
+    "        epps.load(\"results/cifar10_ResNet18_1.0e-02_#scratch_DScifar10_CIMmask_CTdomain_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        read_result(epps, \"vanilla_scratch\")\n",
+    "        \"\"\"epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00#scratch_DScifar10_CIMmask_CTdomain_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        read_result(epps, \"lwf_scratch\")\n",
+    "        epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03#scratch_DScifar10_CIMmask_CTdomain_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        read_result(epps,\"ewc_scratch\")\"\"\"\n",
+    "        draw_pic(\"Domain_Inc_seed_{}\".format(i),\\\n",
+    "                 names=[\"vanilla_scratch\", \"vanilla_finetune\", \"ewc\", \"lwf\"]) \n",
+    "elif case == 4:\n",
+    "    for i in range(1):\n",
+    "        rec = {}\n",
+    "        #epps.load(\"results/cifar10_5_domain_inc\")\n",
+    "        epps.load(\"results/cifar10_ResNet18_1.0e-02_#vanilla_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"vanilla_finetune\")\n",
+    "        epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"lwf\")\n",
+    "        epps.load(\"results/cifar10_ResNet18_1.0e-02_#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps, \"vanilla_scratch\")\n",
+    "        epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        epps.set_order(\"sequential\")\n",
+    "        read_result(epps,\"ewc\")\n",
+    "        \"\"\"epps.load(\"results/cifar10_ResNet18_1.0e-02_#lwf1.00e+00#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        read_result(epps, \"lwf_scratch\")\n",
+    "        epps.load(\"results/cifar10_ResNet18_1.0e-02_#ewc5.00e+03#scratch_DScifar10_CIMmask_CTdata_inc_DAsequential_CvgD9.00e-01_CvgT1.000000e-03_DomS5/Seed{}\".format(i))\n",
+    "        read_result(epps,\"ewc_scratch\")\"\"\"\n",
+    "        draw_pic(\"Data_Inc_seed_{}\".format(i),\\\n",
+    "                 names=[\"vanilla_scratch\", \"vanilla_finetune\", \"ewc\", \"lwf\"]) "
    ]
   },
   {
